--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <body>
 
   <h1>PRIYADHARSHINI.S</h1>
-  <img src="pic.jpg" alt="My Photo" width="200" class="profile">
+  <img src="https://img.freepik.com/premium-photo/beautiful-girl-jpg_1051277-1.jpg" alt="My Photo" width="200" class="profile">
 
   <nav>
     <a href="#bio">Bio</a>
