--- a/l2.html
+++ b/l2.html
@@ -112,7 +112,7 @@
   <script>
     function choosePlan(planName) {
       alert(`You selected the ${planName} Plan!`);
-       window.location.href = `signup-${planName.toLowerCase()}.html`;
+       //window.location.href = `signup-${planName.toLowerCase()}.html`;
     }
   </script>
 </body>
